; ModuleID = '/home/carl/AnghaBench/systemd/src/vconsole/extr_vconsole-setup.c_verify_vc_allocation_byfd.c'
source_filename = "/home/carl/AnghaBench/systemd/src/vconsole/extr_vconsole-setup.c_verify_vc_allocation_byfd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vt_stat = type { i32 }

@VT_GETSTATE = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @verify_vc_allocation_byfd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @verify_vc_allocation_byfd(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.vt_stat, align 4
  store i32 %0, i32* %3, align 4
  %5 = bitcast %struct.vt_stat* %4 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %5, i8 0, i64 4, i1 false)
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @VT_GETSTATE, align 4
  %8 = call i64 @ioctl(i32 %6, i32 %7, %struct.vt_stat* %4)
  %9 = icmp slt i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i32, i32* @errno, align 4
  %12 = sub nsw i32 0, %11
  store i32 %12, i32* %2, align 4
  br label %17

13:                                               ; preds = %1
  %14 = getelementptr inbounds %struct.vt_stat, %struct.vt_stat* %4, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @verify_vc_allocation(i32 %15)
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %13, %10
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i64 @ioctl(i32, i32, %struct.vt_stat*) #2

declare dso_local i32 @verify_vc_allocation(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
